--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,9 @@ aiohttp = "==3.11.16"
 retrying = "==1.3.4"
 
 [dev-packages]
+pytest = "==8.3.5"
+pytest-mock = "==3.14.0"
+coverage = "==7.8.0"
 
 [requires]
 python_version = "3.12"
