--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ pygithub = "==2.6.1"
 gql = "==3.5.2"
 aiohttp = "==3.11.16"
 retrying = "==1.3.4"
+slack-sdk = "==3.35.0"
 
 [dev-packages]
 pytest = "==8.3.5"
