--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ gql = "==3.5.2"
 aiohttp = "==3.11.16"
 retrying = "==1.3.4"
 slack-sdk = "==3.35.0"
+boto3 = "==1.38.4"
 
 [dev-packages]
 pytest = "==8.3.5"
