--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ aiohttp = "==3.11.16"
 retrying = "==1.3.4"
 slack-sdk = "==3.35.0"
 boto3 = "==1.38.4"
+pandas = "==2.2.3"
 
 [dev-packages]
 pytest = "==8.3.5"
