--- a/.github/workflows/job-find-ebs-volume-owners.yml
+++ b/.github/workflows/job-find-ebs-volume-owners.yml
@@ -25,9 +25,16 @@ jobs:
         with:
           role-to-assume: ${{secrets.AWS_COAT_GITHUB_ACTIONS_READONLY_ARN}}
           aws-region: eu-west-2
-      - run: pipenv run python3 -m bin.find_ebs_volume_owners
+      - name: Run Python script with optional manual flag
+        run: |
+          if [ "${{ github.event_name }}" = "workflow_dispatch" ]; then
+            pipenv run python3 -m bin.find_ebs_volume_owners --run_manually
+          else
+            pipenv run python3 -m bin.find_ebs_volume_owners
+            fi
         env:
           ADMIN_SLACK_TOKEN: ${{ secrets.ADMIN_SLACK_TOKEN }}
+          RUN_MANUALLY: ${{ github.event_name == 'workflow_dispatch' }}
       - name: Report failure to Slack
         if: always()
         uses: ravsamhq/notify-slack-action@472601e839b758e36c455b5d3e5e1a217d4807bd # 2.5.0
