--- a/.github/workflows/job-find-ebs-volume-owners.yml
+++ b/.github/workflows/job-find-ebs-volume-owners.yml
@@ -35,6 +35,12 @@ jobs:
         env:
           ADMIN_SLACK_TOKEN: ${{ secrets.ADMIN_SLACK_TOKEN }}
           RUN_MANUALLY: ${{ github.event_name == 'workflow_dispatch' }}
+      - name: Upload report artifact if scheduled run
+        if: github.event_name == 'schedule'
+        uses: actions/upload-artifact@v4
+        with:
+          name: ebs-report
+          path: '*.csv'
       - name: Report failure to Slack
         if: always()
         uses: ravsamhq/notify-slack-action@472601e839b758e36c455b5d3e5e1a217d4807bd # 2.5.0
@@ -44,3 +50,25 @@ jobs:
           notification_title: "Failed to run CP resource wastage job"
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+  upload-ebs-owners-report:
+    if: github.event_name == 'schedule'
+    needs: generate-csv-ebs-owners-optimizer-recommendations
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ebs-report
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@486457dc46e82b9a740ca0ef1dac6a38a3fc272d # v4.0.2
+        with:
+          role-to-assume: ${{secrets.AWS_COAT_GITHUB_ACTIONS_REPORT_UPLOAD_ARN}}
+          aws-region: eu-west-2
+      - name: Upload all CSV files to S3
+        run: |
+          for filename in *.csv; do
+            echo "Uploading $filename to S3"
+            aws s3 cp "$filename" "s3://${{ secrets.S3_REPORT_BUCKET }}/ebs_waste_reports/$filename"
+          done
+     
