--- a/.github/workflows/job_detect_cp_resource_wastage.yml
+++ b/.github/workflows/job_detect_cp_resource_wastage.yml
@@ -3,7 +3,7 @@ name: ♻️ Detect CP Resource Wastage
 on:
   workflow_dispatch:
   schedule:
-  - cron: '0 0 1 * *'
+  - cron: '11 * * * *'
 
 permissions:
   id-token: write
