--- a/.github/workflows/job-find-ebs-volume-owners.yml
+++ b/.github/workflows/job-find-ebs-volume-owners.yml
@@ -3,7 +3,7 @@ name: 🔎 Find EBS Volume Owners
 on:
   workflow_dispatch:
   schedule:
-  - cron: '11 * * * *'
+  - cron: '0 0 1 * *'
 
 permissions:
   id-token: write
