--- a/.github/workflows/job_detect_cp_resource_wastage.yml
+++ b/.github/workflows/job_detect_cp_resource_wastage.yml
@@ -38,6 +38,7 @@ jobs:
           GH_TOKEN: ${{ secrets.ENTERPRISE_BILLING_TOKEN_FROM_TONY }}
           ADMIN_SLACK_TOKEN: ${{ secrets.ADMIN_SLACK_TOKEN }}
           RUN_MANUALLY: ${{ github.event_name == 'workflow_dispatch' }}
+          S3_BUCKET_NAME: ${{ secrets.S3_REPORT_BUCKET }}
       - name: Report failure to Slack
         if: always()
         uses: ravsamhq/notify-slack-action@472601e839b758e36c455b5d3e5e1a217d4807bd # 2.5.0
