--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,7 +11,4 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
-  - package-ecosystem: "pip"
-    directory: "/"
-    schedule:
-      interval: "daily"
+      time: "09:00" # UTC
