--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -14,6 +14,9 @@ ENABLE_LINTERS:
   - YAML_YAMLLINT
   - PYTHON_PYLINT
   - PYTHON_ISORT
+  - TERRAFORM_TERRAFORM_FMT
+  - TERRAFORM_TFLINT
+  - TERRAFORM_TERRASCAN
 
 DISABLE_ERRORS: false
 SPELL_CSPELL_DISABLE_ERRORS: true
@@ -30,3 +33,16 @@ MARKDOWN_MARKDOWN_LINK_CHECK_ARGUMENTS: "-q"
 # DISABLE_ERRORS: true # Uncomment if you want MegaLinter to detect errors but not block CI to pass
 PLUGINS:
   - https://raw.githubusercontent.com/shiranr/linkcheck/v2.0.17.beta/mega-linter-plugin-linkcheck/linkcheck.megalinter-descriptor.yml
+
+TERRAFORM_TFLINT_UNSECURED_ENV_VARIABLES:
+  - GITHUB_TOKEN
+
+TERRAFORM_TERRASCAN_ARGUMENTS: "scan -d . -i terraform -v"
+
+# This threshold has been added as a temporary way to get around a particular error (unsupported block type).
+# Examples of this can be seen in the following issues, and appears to be a bug with Terrscan itself:
+# https://github.com/tenable/terrascan/issues/1615
+# https://github.com/tenable/terrascan/issues/1182
+# https://github.com/super-linter/super-linter/issues/3044
+
+TERRAFORM_TERRASCAN_DISABLE_ERRORS_IF_LESS_THAN: 2
