--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -9,10 +9,13 @@ ENABLE_LINTERS:
   - ACTION_ACTIONLINT
   - MARKDOWN_MARKDOWNLINT
   - MARKDOWN_MARKDOWN_TABLE_FORMATTER
+  - REPOSITORY_GITLEAKS
   - SPELL_CSPELL
   - YAML_PRETTIER
   - YAML_YAMLLINT
+  - JSON_PRETTIER
   - PYTHON_PYLINT
+  - PYTHON_FLAKE8
   - PYTHON_ISORT
   - TERRAFORM_TERRAFORM_FMT
   - TERRAFORM_TFLINT
