--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -3,17 +3,21 @@
 # See all available variables at https://megalinter.io/latest/config-file/ and in linters documentation
 
 APPLY_FIXES: all # all, none, or list of linter keys
-# ENABLE: # If you use ENABLE variable, all other languages/formats/tooling-formats will be disabled by default
-# ENABLE_LINTERS: # If you use ENABLE_LINTERS variable, all other linters will be disabled by default
 ENABLE_LINTERS:
   - ACTION_ACTIONLINT
+  - BASH_SHELLCHECK
   - MARKDOWN_MARKDOWNLINT
-  - MARKDOWN_MARKDOWN_TABLE_FORMATTER
-  - SPELL_CSPELL
+  - DOCKERFILE_HADOLINT
+  - REPOSITORY_GITLEAKS
   - YAML_PRETTIER
   - YAML_YAMLLINT
+  - JSON_PRETTIER
   - PYTHON_PYLINT
+  - PYTHON_FLAKE8
   - PYTHON_ISORT
+  - TERRAFORM_TERRAFORM_FMT
+  - TERRAFORM_TFLINT
+  - TERRAFORM_TERRASCAN
 
 DISABLE_ERRORS: false
 SPELL_CSPELL_DISABLE_ERRORS: true
@@ -27,6 +31,16 @@ GITHUB_COMMENT_REPORTER: true
 VALIDATE_ALL_CODEBASE: false
 LOG_LEVEL: INFO
 MARKDOWN_MARKDOWN_LINK_CHECK_ARGUMENTS: "-q"
-# DISABLE_ERRORS: true # Uncomment if you want MegaLinter to detect errors but not block CI to pass
-PLUGINS:
-  - https://raw.githubusercontent.com/shiranr/linkcheck/v2.0.17.beta/mega-linter-plugin-linkcheck/linkcheck.megalinter-descriptor.yml
+
+TERRAFORM_TFLINT_UNSECURED_ENV_VARIABLES:
+  - GITHUB_TOKEN
+
+TERRAFORM_TERRASCAN_ARGUMENTS: "scan -d . -i terraform -v"
+
+# This threshold has been added as a temporary way to get around a particular error (unsupported block type).
+# Examples of this can be seen in the following issues, and appears to be a bug with Terrscan itself:
+# https://github.com/tenable/terrascan/issues/1615
+# https://github.com/tenable/terrascan/issues/1182
+# https://github.com/super-linter/super-linter/issues/3044
+
+TERRAFORM_TERRASCAN_DISABLE_ERRORS_IF_LESS_THAN: 2
