--- a/.github/workflows/reusable-workflow-terraform.yml
+++ b/.github/workflows/reusable-workflow-terraform.yml
@@ -119,7 +119,9 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -input=false -no-color | make -f "$GITHUB_WORKSPACE/Makefile" redact-terraform-output
+        run: |
+          set -o pipefail
+          terraform plan -input=false -no-color | make -f "$GITHUB_WORKSPACE/Makefile" redact-terraform-output
 
       - name: Post Plan to GitHub PR
         if: github.ref != 'refs/heads/main'
