--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ aiohttp = "==3.12.13"
 retrying = "==1.3.4"
 slack-sdk = "==3.35.0"
 boto3 = "==1.38.37"
-pandas = "*"
+pandas = "==2.3.1"
 
 [dev-packages]
 pytest = "==8.3.5"
