--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ retrying = "==1.3.4"
 slack-sdk = "==3.35.0"
 boto3 = "==1.38.37"
 pandas = "==2.3.1"
+xlsxwriter = "==3.2.5"
 
 [dev-packages]
 pytest = "==8.3.5"
