add trigger of pr

--- a/.github/workflows/job_get_tagging_coverage_report.yml
+++ b/.github/workflows/job_get_tagging_coverage_report.yml
@@ -1,6 +1,10 @@
 name: 📈 Get Tagging Coverage Report
 
 on:
+  on:
+    pull_request:
+      branches:
+        - main
   workflow_dispatch:
     inputs:
       billing_period:
