--- a/.github/workflows/job_generate_tagging_coverage_report.yml
+++ b/.github/workflows/job_generate_tagging_coverage_report.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       billing_period:
-        description: "Billing period in format YYYY-MM (e.g., 202501)"
+        description: "Billing period in format YYYY-MM (e.g., 2025-01)"
         required: true
         type: string
       business_unit:
@@ -27,7 +27,7 @@ permissions:
   contents: write
 
 jobs:
-  detect-cp-nonprod-resource-wastage:
+  generate-tagging-coverage-report:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
