--- a/.github/workflows/job-find-ebs-volume-owners.yml
+++ b/.github/workflows/job-find-ebs-volume-owners.yml
@@ -49,7 +49,7 @@ jobs:
         with:
           status: ${{ job.status }}
           notify_when: "failure"
-          notification_title: "Failed to run CP resource wastage job"
+          notification_title: "Failed to run Find EBS Volume Owners job"
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 
