--- a/.github/workflows/job_detect_cp_resource_wastage.yml
+++ b/.github/workflows/job_detect_cp_resource_wastage.yml
@@ -45,6 +45,6 @@ jobs:
         with:
           status: ${{ job.status }}
           notify_when: "failure"
-          notification_title: "Failed to run CP resource wastage job"
+          notification_title: "Failed to run Detect CP Resource Wastage job"
         env:
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
