amend workjflow title and triggers

--- a/.github/workflows/job_export_opt_hub_data.yml
+++ b/.github/workflows/job_export_opt_hub_data.yml
@@ -1,8 +1,7 @@
-name: 📈 Generate Tagging Coverage Report
+name: Export cost optimisation hub data
 
 on:
   workflow_dispatch:
-    inputs:
   pull_request:
     branches: [main]
 
