--- a/config/tech-docs.yml
+++ b/config/tech-docs.yml
@@ -17,3 +17,4 @@ github_branch: main
 full_service_name: Cloud Optimisation and Accountability
 show_expiry: true
 show_review_banner: true
+ga4_tracking_id: G-37377084
