--- a/config/tech-docs.yml
+++ b/config/tech-docs.yml
@@ -17,4 +17,4 @@ github_branch: main
 full_service_name: Cloud Optimisation and Accountability
 show_expiry: true
 show_review_banner: true
-ga4_tracking_id: G-37377084
+ga4_tracking_id: G-ZH82N03EEY
