test if 2 codeowners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @ministryofjustice/cloud-optimisation-and-accountability
+* @ministryofjustice/cloud-optimisation-and-accountability @ministryofjustice/lev-test-team
