--- a/.github/workflows/check-approvers.yml
+++ b/.github/workflows/check-approvers.yml
@@ -1,31 +1,41 @@
-name: PR Approval Workflow
+name: PR Approval Check
 
 on:
-  pull_request:
-    branches:
-      - main
   pull_request_review:
-    types: [submitted]
+    types:
+      - submitted
+
+concurrency:
+  group: pr-${{ github.event.pull_request.number }}
+  cancel-in-progress: true
 
 jobs:
-  check-approvals:
+  approval-check:
     runs-on: ubuntu-latest
     permissions:
-      id-token: write
-      contents: read
       pull-requests: read
-    steps:
-      - name: Check for required approvals
-        id: check-approvals
-        uses: skymoore/required-approvals@v4.2.6
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          read_org_scoped_token: ${{ secrets.TEST_LEV_ADMIN_GITHUB_PAT }}
-          org_name: ministryofjustice
-          min_approvals: 1
-          limit_org_teams_to_codeowners_file: true
+      contents: read
 
-      - name: Run action if all required approvals are met
-        if: ${{ steps.check-approvals.outputs.approved == 'true' }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
+        with:
+          python-version: "3.12"
+          cache: "pipenv"
+
+      - name: Install Pipenv
         run: |
-          echo "All required approvals are met. Running the action."
+          pip install pipenv
+          pipenv install
+
+      - name: Install dependencies
+        run: pip install requests
+
+      - name: Run approval check
+        env:
+          GITHUB_TOKEN: ${{ secrets.TEST_LEV_ADMIN_GITHUB_PAT }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+        run: pipenv run python3 -m bin.check_pr_approvals
