--- a/.github/workflows/check-approvers.yml
+++ b/.github/workflows/check-approvers.yml
@@ -52,4 +52,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.TEST_LEV_ADMIN_GITHUB_PAT }}
           GITHUB_REPOSITORY: ${{ github.repository }}
           PR_NUMBER: ${{ github.event.pull_request.number }}
-        run: pipenv run python3 -m bin.check_pr_approvals "${{ needs.detect-changes.outputs.modified_files || '' }}"
+        run: pipenv run python3 -m bin.check_pr_approvals '${{ needs.detect-changes.outputs.modified_files }}'
