--- a/.github/workflows/check-approvers.yml
+++ b/.github/workflows/check-approvers.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       needs_check: ${{ steps.filter.outputs.needs_check }}
+      modified_files: ${{ steps.filter.outputs.needs_check_files }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -24,7 +25,7 @@ jobs:
   approval-check:
     runs-on: ubuntu-latest
     needs: detect-changes
-    if: needs.detect-changes.outputs.needs_check == 'true'
+    if: detect-changes.outputs.needs_check == 'true'
     permissions:
       pull-requests: read
       contents: read
@@ -32,6 +33,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - run: echo modified files '${{ detect-changes.outputs.needs_check }}'
 
       - uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
         with:
