--- a/.github/workflows/check-approvers.yml
+++ b/.github/workflows/check-approvers.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - run: echo modified files '${{ needs.detect-changes.outputs.needs_check }}'
+      - run: echo modified files '${{ needs.detect-changes.outputs.modified_files }}'
 
       - uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
         with:
