--- a/.github/workflows/check-approvers.yml
+++ b/.github/workflows/check-approvers.yml
@@ -22,6 +22,7 @@ jobs:
           filters: |
             needs_check:
               - "bin/**"
+          list-files: 'json'
   approval-check:
     runs-on: ubuntu-latest
     needs: detect-changes
